raspi-cluster-assets/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
  namespace: green-web-app
  # TO ASSIGN EXTERNAL IP ADDRESSES TO THE SERVICE DIRECTLY WITH METALLB (NOT NEEDED WHEN USING NGINX INGRESS CONTROLLER)
  # annotations:
  #   metallb.universe.tf/address-pool: raspi-cluster-ip-addresses
spec:
  # TO ASSIGN EXTERNAL IP ADDRESSES TO THE SERVICE DIRECTLY WITH METALLB (NOT NEEDED WHEN USING NGINX INGRESS CONTROLLER)
  # type: LoadBalancer
  type: ClusterIP
  selector:
    app: green-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
