raspi-cluster-assets/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-ingress
  namespace: green-web-app
spec:
  ingressClassName: nginx
  rules:
    - host: green-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: green-service
                port:
                  number: 8080
